--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -24,5 +24,12 @@
 	 android:layout_height="wrap_content"
 	 android:text="This is Activity Two">
 	</TextView>
+	
+	<LinearLayout 
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/rect"/>
+
 
 </LinearLayout>
