--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:paddingBottom="@dimen/activity_vertical_margin"
-	android:paddingLeft="@dimen/activity_horizontal_margin"
-	android:paddingRight="@dimen/activity_horizontal_margin"
-	android:paddingTop="@dimen/activity_vertical_margin"
-	tools:context=".ActivityTwo"
-	android:orientation="vertical"
-	 android:id="@+id/graph1">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".ActivityTwo" >
+
+ <!-- android:layout_height="fill_parent" -->
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Button" />
 
 <LinearLayout
    android:orientation="vertical"
-   android:layout_width="fill_parent"
-   android:layout_height="250dip"
-   android:id="@+id/graph2" />
+
+   android:layout_width="wrap_content"
+   android:layout_height="wrap_content"
+   android:id="@+id/graph2" >
+
+    <com.example.wifi.DrawChart
+        android:id="@+id/barchart"
+        android:layout_width="165dp"
+        android:layout_height="0dp"
+        android:background="#444"
+        android:padding="16dp" />
+
+</LinearLayout>
 
 	<TextView
 	 android:id="@+id/textView1"
@@ -25,11 +42,5 @@
 	 android:text="This is Activity Two">
 	</TextView>
 	
-	<LinearLayout 
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/rect"/>
-
 
 </LinearLayout>
