--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -8,8 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ActivityTwo" >
-
+    tools:context=".ActivityTwo"
+     >
+    
+    
  <!-- android:layout_height="fill_parent" -->
 <LinearLayout
         android:layout_width="fill_parent"
@@ -38,13 +40,15 @@
             android:text="Cycling" />
     </LinearLayout>
     
-    <com.example.wifi.DrawChart
+    <com.example.wifi.DrawChart         
         android:id="@+id/barchart"
-        android:layout_width="165dp"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#444"
         android:padding="16dp" />
 
+    
      
 	<TextView
 	 android:id="@+id/textView1"
