--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -4,18 +4,21 @@ xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ActivityTwo"
      >
     
     
  <!-- android:layout_height="fill_parent" -->
-<LinearLayout
+    
+    <com.example.wifi.DrawChart
+        android:id="@+id/barchart"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="412dp"
+        android:background="#444" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
         android:orientation="horizontal" >
 
         <Button
@@ -39,23 +42,5 @@ xmlns:tools="http://schemas.android.com/tools"
             android:layout_weight="1"
             android:text="Cycling" />
     </LinearLayout>
-    
-    <com.example.wifi.DrawChart         
-        android:id="@+id/barchart"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#444"
-        android:padding="16dp" />
-
-    
-     
-	<TextView
-	 android:id="@+id/textView1"
-	 android:layout_width="wrap_content"
-	 android:layout_height="wrap_content"
-	 android:text="This is Activity Two">
-	</TextView>
-	
 
 </LinearLayout>
