Not correct indication on emulator

--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -6,15 +6,21 @@ xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     tools:context=".ActivityTwo"
      >
-    
-    
- <!-- android:layout_height="fill_parent" -->
-    
+
     <com.example.wifi.DrawChart
         android:id="@+id/barchart"
         android:layout_width="fill_parent"
-        android:layout_height="442dp"
+        android:layout_height="462dp"
         android:background="#444" />
+        
+    <!-- android:layout_height="fill_parent" -->
+<!-- 
+    <Button
+        android:id="@+id/test_button_generate"
+        android:layout_width="152dp"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+     -->
 
     <!-- 
     <LinearLayout
@@ -44,11 +50,5 @@ xmlns:tools="http://schemas.android.com/tools"
             android:text="Cycling" />
     </LinearLayout>
  -->
-
-    <Button
-        android:id="@+id/test_button_generate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
  
 </LinearLayout>
