--- a/WiFi/res/drawable-hdpi/dialog_button.xml
+++ b/WiFi/res/drawable-hdpi/dialog_button.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-  android:shape="rectangle">
-  <gradient android:startColor="#C0C0C0" 
-    android:endColor="#CDCDCD"
-    android:angle="270" />
-  <corners android:radius="5dp" />
-  <stroke android:width="1px" android:color="#000000" />
-  
-  <item android:state_pressed="true"
-          android:drawable="@android:color/black" /> <!-- pressed -->
-    <item android:drawable="@android:color/white" /> <!-- default -->
-  
+    android:shape="rectangle" >
+
+    <gradient
+        android:angle="270"
+        android:endColor="#CDCDCD"
+        android:startColor="#C0C0C0" />
+
+    <corners android:radius="5dp" />
+
+    <stroke
+        android:width="1px"
+        android:color="#000000" />
+
+    <item
+        android:drawable="@android:color/black"
+        android:state_pressed="true"/>
+ <!-- pressed -->
+    <item android:drawable="@android:color/white"/>
+ <!-- default -->
+
 </shape>
