--- a/WiFi/res/drawable-hdpi/gradient.xml
+++ b/WiFi/res/drawable-hdpi/gradient.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:startColor="#000000"
-        android:endColor="#000030"
-        android:angle="180"
-        />
-    <!-- android:angle="45" -->    
-</shape>
+    android:shape="rectangle" >
 
+    <gradient
+        android:angle="180"
+        android:endColor="#000030"
+        android:startColor="#000000" />
+    <!-- android:angle="45" -->
+
+</shape>
