--- a/WiFi/res/drawable-hdpi/press_state.xml
+++ b/WiFi/res/drawable-hdpi/press_state.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-  android:shape="rectangle">
-  <gradient android:startColor="#000000" 
-    android:endColor="#CDCDCD"
-    android:angle="270" />
-  <corners android:radius="5dp" />
-  <stroke android:width="1px" android:color="#000000" />
+    android:shape="rectangle" >
 
+    <gradient
+        android:angle="270"
+        android:endColor="#CDCDCD"
+        android:startColor="#000000" />
+
+    <corners android:radius="5dp" />
+
+    <stroke
+        android:width="1px"
+        android:color="#000000" />
 
 </shape>
