--- a/WiFi/res/layout/my_listview.xml
+++ b/WiFi/res/layout/my_listview.xml
@@ -3,13 +3,12 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:background="#000000"
     android:gravity="center_vertical"
-    android:background="#000000"    
-    android:textColor="#228B22"
-    android:textSize="14sp"
-    android:textStyle="bold"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
     android:paddingRight="?android:attr/listPreferredItemPaddingRight"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-/>
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textColor="#228B22"
+    android:textSize="14sp"
+    android:textStyle="bold" />
